Fix job title display on narrow screens.

--- a/themes/finna2/less/finna/organisation-info.less
+++ b/themes/finna2/less/finna/organisation-info.less
@@ -583,6 +583,9 @@
                 td:nth-of-type(2) {
                     display: none;
                 }
+                .job-title {
+                    display: block;
+                }
             }
             @media (min-width: @screen-sm-min) {
                 table {
@@ -594,9 +597,9 @@
                     td:nth-of-type(2) {
                         display: table-cell;
                     }
-                }
-                .job-title {
-                    display: none;
+                    .job-title {
+                        display: none;
+                    }
                 }
             }
         }
